<resources>
    <string name="app_name">RobotControler</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="control_up">向上</string>
    <string name="control_down">向下</string>
    <string name="control_right">向右</string>
    <string name="control_left">向左</string>
    <string name="menu_play">播放</string>
    <string name="menu_pause">停止</string>
    <string name="menu_setting">设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="state_error">与小车网络已断开，请检查网络</string>
    <string name="state_good">已链接小车</string>
    <string name="main_refresh">刷新重试</string>
    <string name="main_noWifi">无法与小车建立连接，请检查网络后重试。</string>
    <string name="main_progress_msg">检查网路中，请稍后。</string>
    <string name="main_check_msg">网络已准备就绪，随时可以开始。</string>
    <string name="remoter_info_temperature">当前温度：</string>
    <string name="remoter_info_distance">前方距离：</string>
    <string name="remoter_info_gas">有害气体浓度：</string>
    <string name="remoter_info_fab">传感器信息</string>
    <string name="remoter_toolbar_play">播放</string>
    <string name="remoter_toolbar_pause">暂停</string>
    <string name="remoter_info_humidity">当前湿度:</string>
    <string name="control_tighten">机械手抓</string>
    <string name="control_loosen">机械手松</string>
</resources>
