<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/bt_arm_left"
        android:layout_width="@dimen/control_button_margin"
        android:layout_height="@dimen/control_button_margin"
        android:layout_above="@+id/bt_arm_down"
        android:layout_toStartOf="@+id/bt_arm_down"
        android:adjustViewBounds="false"
        android:background="#00000000"
        android:contentDescription="@string/control_left"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/control_left" />

    <ImageButton
        android:id="@+id/bt_arm_up"
        android:layout_width="@dimen/control_button_margin"
        android:layout_height="@dimen/control_button_margin"
        android:layout_above="@+id/bt_arm_left"
        android:layout_toEndOf="@+id/bt_arm_left"
        android:background="#00000000"
        android:contentDescription="@string/control_up"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/control_up" />

    <ImageButton
        android:id="@+id/bt_arm_right"
        android:layout_width="@dimen/control_button_margin"
        android:layout_height="@dimen/control_button_margin"
        android:background="#00000000"
        android:contentDescription="@string/control_right"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/control_right"
        android:layout_below="@+id/bt_arm_up"
        android:layout_toEndOf="@+id/bt_arm_up" />

    <ImageButton
        android:id="@+id/bt_arm_down"
        android:layout_width="@dimen/control_button_margin"
        android:layout_height="@dimen/control_button_margin"
        android:background="#00000000"
        android:contentDescription="@string/control_down"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/control_down"
        android:layout_marginEnd="46dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:id="@+id/bt_arm_tighten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/control_tighten"
        app:srcCompat="@drawable/ic_add_24dp"
        android:layout_marginEnd="12dp"
        android:layout_alignTop="@+id/bt_arm_up"
        android:layout_toStartOf="@+id/bt_arm_left" />

    <ImageButton
        android:id="@+id/bt_arm_loosen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bt_arm_tighten"
        android:layout_below="@+id/bt_arm_tighten"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/control_loosen"
        app:srcCompat="@drawable/ic_remove_24dp" />
</RelativeLayout>