<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingEnd="16dp"
    android:paddingStart="0dp"
    android:paddingTop="16dp">

    <android.support.v7.widget.CardView
        android:id="@+id/info_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/info_temperature_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/tx_margin"
                android:layout_weight="2"
                android:text="@string/remoter_info_temperature" />

            <TextView
                android:id="@+id/info_temperature_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_margin="@dimen/tx_margin"
                android:layout_weight="1"
                tools:text="N/A" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/info_humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_temperature"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/info_humidity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/tx_margin"
                android:layout_weight="2"
                android:text="@string/remoter_info_humidity" />

            <TextView
                android:id="@+id/info_humidity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_margin="@dimen/tx_margin"
                android:layout_weight="1"
                tools:text="N/A" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/info_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/info_humidity"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/info_distance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/tx_margin"
                android:layout_weight="2"
                android:text="@string/remoter_info_distance" />

            <TextView
                android:id="@+id/info_distance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_margin="@dimen/tx_margin"
                android:layout_weight="1"
                tools:text="N/A" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/info_gas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/info_distance"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/info_gas_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/tx_margin"
                android:layout_weight="1.5"
                android:text="@string/remoter_info_gas" />

            <TextView
                android:id="@+id/info_gas_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_margin="@dimen/tx_margin"
                android:layout_weight="1"
                tools:text="N/A" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
